tests/tooling/fixtures/native/recovery/negative/negative_conditional_parser_missing_false_expr.objc3
// Expected diagnostic code(s): O3P103.
module NegativeConditionalParserMissingFalseExpr;

fn main() -> i32 {
  let x = true ? 1 : ;
  return x;
}
